phalcom-ast/tests/snapshots/integration__parser__symbol_name_literal_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"let s = #move\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        Let(
            LetBinding {
                kind: Let,
                pattern: Name {
                    name: "s",
                    range: CopyRange {
                        start: 4,
                        end: 5,
                    },
                },
                annotation: None,
                value: Some(
                    Symbol(
                        SymbolExpr {
                            kind: Name(
                                "move",
                            ),
                            range: CopyRange {
                                start: 8,
                                end: 13,
                            },
                        },
                    ),
                ),
                range: CopyRange {
                    start: 0,
                    end: 13,
                },
            },
        ),
    ],
}
