phalcom-ast/tests/snapshots/integration__parser__trailing_blank_lines_and_whitespace_parse.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"\\n\\nlet x = 1\\n  \\n\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 2,
        },
    },
    statements: [
        Let(
            LetBinding {
                kind: Let,
                pattern: Name {
                    name: "x",
                    range: CopyRange {
                        start: 6,
                        end: 7,
                    },
                },
                value: Some(
                    Int {
                        digits: "1",
                        radix: 10,
                        range: CopyRange {
                            start: 10,
                            end: 11,
                        },
                    },
                ),
                range: CopyRange {
                    start: 2,
                    end: 11,
                },
            },
        ),
    ],
}
