phalcom-ast/tests/snapshots/integration__parser__unary_expression.snap
---
source: phalcom-ast/tests/parser.rs
assertion_line: 92
expression: "parse(\"not true\")"
---
Program {
    statements: [
        Expr {
            expr: Unary(
                UnaryExpr {
                    op: Not,
                    op_range: Some(
                        CopyRange {
                            start: 0,
                            end: 3,
                        },
                    ),
                    expr: Boolean {
                        value: true,
                        range: CopyRange {
                            start: 4,
                            end: 8,
                        },
                    },
                    range: CopyRange {
                        start: 0,
                        end: 8,
                    },
                },
            ),
            range: CopyRange {
                start: 0,
                end: 8,
            },
        },
    ],
}
