phalcom-ast/tests/snapshots/integration__parser__whitespace_only_input_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"\\n  \\n\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 4,
        },
    },
    statements: [],
}
